MDEV-18035 Failing assertion on DELETE

instant_alter_column_possible(): Do not allow instant removal of NOT NULL
attribute from a column that belongs to the key of the clustered index.